# hypr-nitrogen

./: .gitignore  .stylelintrc.json  Cargo.toml  README.md  eslint.config.js  export_bindings.sh  install-archlinux.sh  install.sh  package.json  pnpm-lock.yaml  tsconfig.json  uninstall.sh  vite.config.ts
archlinux-build/: PKGBUILD
src/: App.css  App.tsx  store.tsx  utils.ts
src-tauri/: .gitignore  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/migrations/2025-06-24-074741_init/: down.sql  up.sql
src-tauri/src/: cli.rs  database.rs  db_models.rs  hyprpaper.rs  lib.rs  main.rs  scan.rs  schema.rs
src-tauri/src/database/: models.rs
src-tauri/src/hyprpaper/: active_screens.rs  mod.rs  preload.rs  set_wallpaper.rs  unload.rs
src-tauri/src/ipc/: get.rs  mod.rs  remove.rs  set.rs  util.rs
src-tauri/src/utils/: fs.rs  mod.rs  restore.rs  scan.rs
src/components/: Header.tsx  Settings.tsx  Thumbnail.tsx  ThumbnailsList.tsx  WallpaperSource.tsx  index.ts
src/components/Header/: Header.tsx
src/components/Settings/: Settings.tsx
src/components/Thumbnail/: Thumbnail.tsx
src/components/ThumbnailsList/: ThumbnailsList.tsx  index.ts
src/components/WallpaperSource/: WallpaperSource.tsx  index.ts
src/icons/: add.tsx  full_heart.tsx  heart.tsx  index.ts  random.tsx  remove.tsx  restore.tsx  save.tsx  scan.tsx  search.tsx  settings.tsx
src/ipc/: index.ts  types.ts
src/ipc/bindings/: Active.ts  Wallpaper.ts  WallpaperSource.ts  index.ts
src/styles/: App.css
