[package]
name = "hypr-nitrogen"
version = "0.1.0"
description = "Wallpaper selector for hyprland"
authors = ["mesalilac"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hypr_nitrogen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
diesel = { version = "2.2.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "r2d2",
] }
dotenvy = "0.15"
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
directories = "6.0.0"
nanoid = "0.4.0"
walkdir = "2.5.0"
blake3 = "1.8.2"
rand = "0.9.1"
